[project]
name = "didactic-nltk"
version = "0.1.0"
description = "A didactic repository to demonstrate how to use the NLTK Python module"
authors = [
    {name = "CServinL"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "nltk (>=3.9.2,<4.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
